--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -30,7 +30,7 @@
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Details</a></li>
-							<li><a href="#second">Sign Up Today</a></li>
+							<li><a href="#second">Sign Up</a></li>
 						</ul>
 					</nav>
 
@@ -44,9 +44,7 @@
 										<header class="major">
 											<h2>WebWinners Driving School</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>Learn to drive in Brussels with an English-speaking driving instructor with theory courses and practical lessons for both cars and motorbikes. Driving lessons are also available in other European languages including Spanish and Dutch. Read about getting a driving licence and what to expect if you're taking a driving test in Belgium.</p>
 										<ul class="actions">
 											<li><a href="https://driving-license-app.herokuapp.com/" class="button">Learn More</a></li>
 										</ul>
@@ -62,19 +60,19 @@
 								</header>
 								<ul class="features">
 									<li>										 
-										<span class="image" style="padding: 10.4px; margin: 0 0 32px;"><img src="images/tutorials.png" width="171" height="171" alt="" /></span>
+										<span class="image" style="padding: 10.4px; margin: 0 0 32px;"><img src="images/tutorials.png" width="300" height="171" alt="" /></span>
 										<h3>Tutorials</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Use it as a practice guide to help you prepare for the knowledge test that all new drivers must pass to obtain a learner's permit.</p>
 									</li>
 									<li>
-										<span class="image" style="padding: 10.4px; margin: 0 0 32px;"><img src="images/tips.png" width="171" height="171" alt="" /></span>
+										<span class="image" style="padding: 10.4px; margin: 0 0 32px;"><img src="images/tips.png" width="300" height="171" alt="" /></span>
 										<h3>Articles</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>These articles and tips will help you improve your odds of passing.</p>
 									</li>
 									<li>
-										<span class="image" style="padding: 10.4px; margin: 0 0 32px;"><img src="images/tests.png" width="171" height="171" alt="" /></span>
+										<span class="image" style="padding: 10.4px; margin: 0 0 32px;"><img src="images/tests.png" width="300" height="171" alt="" /></span>
 										<h3>Tests</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>With these practice tests you can prepare yourself for obtaining your driving license. The practice questions are based on the official theory exam.</p>
 									</li>
 								</ul>
 								<footer class="major">
@@ -100,15 +98,17 @@
 							</section>
 
 					</div>
-
+					
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
+							<h2>Contact Us</h2>
+							<h5><a href="https://github.com/ayseakyol">@ayseakyol</a></h5>
+							<h5><a href="https://github.com/Rahela-HYF">@Rahela-HYF</a></h5>
+							<h5><a href="https://github.com/feridunAKYOL">@feridunAKYOL</a></h5>
+							<h5><a href="https://github.com/thomashaile">@thomashaile</a></h5>
+							<h5><a href="https://github.com/OmerSnck">@OmerSnck</a></h5>
+							<h5><a href="https://github.com/mesutBE">@mesutBE</a></h5>
 						</section>
 						<section>
 							<h2>WebWinners Driving School</h2>
